--- a/src/app/modules/forms/popover-validation/popover.component.ng.scss
+++ b/src/app/modules/forms/popover-validation/popover.component.ng.scss
@@ -6,8 +6,19 @@
     //margin-top: 1.5rem;
     display: block;
 
+    .m-popover__close {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      font-size: 24px;
+      cursor: pointer;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
     .m-popover__content {
       margin-top: 2.2rem;
+
       opacity: 0;
       visibility: hidden;
 
@@ -105,6 +116,15 @@
                 .m-loadingSpinner__container {
                   height: 15px;
                   width: 15px;
+                }
+              }
+            }
+
+            ::ng-deep {
+              m-tooltip {
+                margin-left: 2px !important;
+                .m-tooltip > i {
+                  font-size: 13px;
                 }
               }
             }
