Various fixes to autoplay next video minds#2001

--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -31,6 +31,7 @@
           "
           (keyup)="getPostPreview(content)"
           (keypress)="keypress($event)"
+          (keydown)="keydown($event)"
           [placeholder]="
             parent.child_path ? 'Add your reply' : 'Add your comment'
           "
