Improved earning stylings

--- a/src/app/common/components/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/common/components/dashboard-layout/dashboard-layout.component.scss
@@ -15,6 +15,7 @@ m-dashboardLayout {
   position: relative;
   display: block;
   width: 100%;
+  padding-top: 10px;
   a {
     font-weight: 400;
     text-decoration: none;
