--- a/src/app/modules/wallet/components/tokens/rewards/rewards.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/rewards/rewards.component.ng.scss
@@ -10,6 +10,7 @@
     padding: 10px 15px;
     margin-bottom: 20px;
     border: 2px;
+    border-radius: 2px;
     cursor: pointer;
 
     @include m-theme() {
@@ -28,6 +29,16 @@
     justify-content: space-between;
     margin: 20px 0;
     max-width: 600px;
+
+    @include mobile-only {
+      flex-direction: column;
+    }
+
+    .m-walletTokenEarningsEstimates__item {
+      @include mobile-only {
+        padding: 7px 0;
+      }
+    }
 
     .m-walletTokenEarningsEstimatesItem__label {
       font-size: 16px;
@@ -66,6 +77,10 @@
   .m-walletTokenEarnings__multiplierBarWrapper,
   .m-walletTokenEarningsMultiplier__secondary {
     padding: 10px;
+
+    @include mobile-only {
+      padding: 5px;
+    }
   }
 
   .m-walletTokenEarnings__multiplierBar {
@@ -80,9 +95,10 @@
     .m-walletTokenEarningsMultiplierBar__progress {
       height: 100%;
       background-color: #a3c000;
-      // @include m-theme() {
-      //   background-color: themed($m-blue);
-      // }
+    }
+
+    @include mobile-only {
+      width: 40px;
     }
   }
 
