Merge: Improved blog composer styling !1397
Squashed commit of the following:

commit 16c18f0e5de3888c5658efa57b50a629498a4802
Merge: 332ad650a 25253ddd3
Author: Mark Harding <mark@kramnorth.com>
Date:   Wed Mar 31 09:33:08 2021 +0100

    Merge branch 'master' of gitlab.com:minds/front into feature/improved-blog-composer

commit 332ad650a201f2308d5a8813ddd6deb84c684959
Author: Michael Bradley <michael@floe.ie>
Date:   Wed Mar 24 13:04:45 2021 +0000

    Final blog editor cleanup

commit fbbfcc7939d76ff045e6ae44e8e9dc33626a04a7
Merge: e48f64fbf 8cde61cda
Author: Michael Bradley <michael@floe.ie>
Date:   Wed Mar 24 12:58:17 2021 +0000

    Merge branch 'master' of gitlab.com:minds/front into feature/improved-blog-composer

commit e48f64fbfcc3cb7163d018dc53bb7668da44dd06
Author: Michael Bradley <michael@floe.ie>
Date:   Wed Mar 24 10:57:43 2021 +0000

    Further composer editor updates for blog

commit 2ebabb8239cadc048ef6369915af89280f6afd7f
Author: Michael Bradley <michael@floe.ie>
Date:   Mon Mar 22 11:35:43 2021 +0000

    Blog editor WIP

--- a/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
@@ -7,6 +7,14 @@
       color: 1px solid themed($m-bgColor--primary);
     }
 
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 76px);
+
+    .m-blogEditor__bodyContainer {
+      padding-bottom: 40px;
+    }
+
     .m-blogEditor__bannerImageContainer {
       // new stacking context
       position: relative;
@@ -37,7 +45,12 @@
     }
 
     .m-blogEditor__container {
-      padding: 40px 100px;
+      position: relative;
+      flex-grow: 1;
+      flex-shrink: 1;
+      overflow-y: scroll;
+
+      padding: 40px 100px 80px 100px;
       @media screen and (max-width: $min-desktop) {
         padding: 20px 40px;
       }
@@ -123,6 +136,12 @@
           font-weight: bold;
           resize: none;
           overflow: hidden;
+
+          &::placeholder {
+            @include m-theme() {
+              color: themed($m-textColor--secondary);
+            }
+          }
         }
       }
     }
