--- a/src/app/modules/blogs/v2/edit/bottom-bar/bottom-bar.component.ng.scss
+++ b/src/app/modules/blogs/v2/edit/bottom-bar/bottom-bar.component.ng.scss
@@ -1,6 +1,8 @@
 @import 'defaults.scss';
 
 :host {
+  position: sticky;
+  bottom: 0;
   @include m-theme() {
     color: themed($m-textColor--primary);
   }
