--- a/src/app/modules/blogs/v2/edit/ckeditor/editor.component.ng.scss
+++ b/src/app/modules/blogs/v2/edit/ckeditor/editor.component.ng.scss
@@ -9,7 +9,7 @@
   .m-ck-editor-wrapper {
     // background: hotpink !important;
     // height: 60vh;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
 
   .ck-button {
