--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -41,6 +41,16 @@ $min-huge: 1280px;
   flex: $flex;
 }
 
+@mixin hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 @function str-replace($string, $search, $replace: '') {
   $index: str-index($string, $search);
 
