--- a/src/app/modules/blogs/blog.scss
+++ b/src/app/modules/blogs/blog.scss
@@ -78,6 +78,12 @@
       figure.image {
         text-align: center;
       }
+
+      figure.table {
+        table {
+          margin: unset;
+        }
+      }
     }
   }
 
