Fix up issue with blog paywall taking over whole screen and captcha btn

--- a/src/app/modules/blogs/view/view.ng.scss
+++ b/src/app/modules/blogs/view/view.ng.scss
@@ -1,6 +1,9 @@
 @import 'defaults.scss';
 
 :host {
+  header {
+    position: relative;
+  }
   .m-blog-header {
     padding-bottom: 20px;
     margin-bottom: 20px;
