--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -18,10 +18,10 @@
         [enabled]="!showLabels"
       >
         <i class="material-icons" m-tooltip--anchor>add</i>
-        <span i18n="@@M__COMMON__NEW_GROUP">New group</span>
+        <span i18n="@@M__COMMON__NEW_GROUP">New Group</span>
 
         <ng-container i18n="@@M__COMMON__NEW_GROUP">
-          New group
+          New Group
         </ng-container>
       </m-tooltip>
       <span
@@ -29,7 +29,7 @@
         i18n="@@M__COMMON__NEW_GROUP"
         *ngIf="showLabels"
       >
-        New group
+        New Group
       </span>
     </a>
   </li>
