use input type time in scheduler

--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -206,6 +206,7 @@ m-composer__popup {
     input[type='text'],
     input[type='number'],
     input[type='password'],
+    input[type='time'],
     input[type='email'] {
       width: 225px;
       max-width: 100%;
