--- a/src/app/modules/composer/components/popup/schedule/schedule.component.scss
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.scss
@@ -157,6 +157,7 @@
       input[type='text'],
       input[type='number'],
       input[type='password'],
+      input[type='time'],
       input[type='email'] {
         width: 167px;
       }
