--- a/src/app/modules/composer/components/popup/schedule/schedule.component.html
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.html
@@ -26,7 +26,7 @@
         <div class="m-composerPopup__field">
           <label i18n="@@COMMON__TIME">Time (24-hour)</label>
           <input
-            type="text"
+            type="time"
             [ngModel]="state.time"
             (ngModelChange)="onTimeChange($event)"
           />
