(chore): remove eth and bitcoin option from pro settings - closes minds#2232

--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -81,7 +81,7 @@
             <br /><br />
             If you pay for your membership in tokens, you are only eligible to
             be paid out in tokens. If you pay in cash, you are eligible to be
-            paid out in cash, Bitcoin, Ether or tokens.
+            paid out in cash or tokens.
           </p>
 
           <a
