--- a/src/app/modules/channels/v2/header/header.component.html
+++ b/src/app/modules/channels/v2/header/header.component.html
@@ -30,6 +30,11 @@
       ></m-channel--badges>
     </h1>
 
-    <h2 class="m-channelHeaderInfo__username">@{{ channel.username }}</h2>
+    <span class="m-channelHeaderInfo__username">
+      @{{ channel.username }}
+      <span *ngIf="channel.subscriber">
+        Subscribes to you
+      </span>
+    </span>
   </div>
 </div>
