Chat icon with unread count

--- a/src/app/modules/layout/page/page.component.ng.scss
+++ b/src/app/modules/layout/page/page.component.ng.scss
@@ -10,4 +10,10 @@
       }
     }
   }
+
+  & > ::ng-deep m-chatIcon {
+    @media screen and (min-width: $max-mobile + 1) {
+      display: none;
+    }
+  }
 }
