--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -127,6 +127,33 @@
         </a>
       </li>
 
+      <ng-container *mIfFeature="'matrix'">
+        <li
+          *ngIf="user"
+          class="m-sidebarNavigation__item"
+          [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        >
+          <a href="https://chat.minds.com/" target="chat" (click)="toggle()">
+            <m-tooltip
+              [enabled]="!showLabels"
+              [anchor]="'left'"
+              [useParentPosition]="true"
+            >
+              <m-chatIcon m-tooltip--icon></m-chatIcon>
+              <ng-container i18n="@@COMMON__CHAT">Chat</ng-container>
+            </m-tooltip>
+
+            <span class="m-sidebarNavigationItem__text">
+              <ng-container i18n="@@COMMON__CHAT">Chat</ng-container>
+              <m-icon
+                iconId="open_in_new"
+                class="m-sidebarNavigation__newWindowIcon"
+              ></m-icon>
+            </span>
+          </a>
+        </li>
+      </ng-container>
+
       <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
