--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -22,6 +22,9 @@
     </div>
   </div>
 </m-body>
+<ng-container *mIfFeature="'matrix'">
+  <m-chatIcon *ngIf="session.isLoggedIn()" [floating]="true"></m-chatIcon>
+</ng-container>
 
 <ng-container *mIfBrowser>
   <m-messenger *ngIf="session.isLoggedIn() && !isProDomain"></m-messenger>
