--- a/src/app/modules/admin/liquidity-providers/liquidity-providers.component.html
+++ b/src/app/modules/admin/liquidity-providers/liquidity-providers.component.html
@@ -1,9 +1,9 @@
 <div class="m-adminLiquidityPosition__list">
   <div class="m-adminLiquidityPositionList__item" *ngFor="let user of users">
-    <m-channelCard
-      [channel]="user"
+    <m-publisherCard
+      [publisher]="user"
       [showSubscribeButton]="false"
-    ></m-channelCard>
+    ></m-publisherCard>
 
     <div class="m-adminLiquidityPositionListItem__info">
       <div>
