--- a/src/app/modules/admin/liquidity-providers/liquidity-providers.component.ng.scss
+++ b/src/app/modules/admin/liquidity-providers/liquidity-providers.component.ng.scss
@@ -13,7 +13,7 @@
       border: 1px solid themed($m-borderColor--primary);
     }
 
-    ::ng-deep m-channelCard .m-channelCard {
+    ::ng-deep m-publisherCard .m-publisherCard {
       border: none !important;
     }
   }
