--- a/src/app/modules/boost/liquidity-spot/liquidity-spot.component.html
+++ b/src/app/modules/boost/liquidity-spot/liquidity-spot.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="entity$ | async as entity">
-  <m-channelCard [channel]="entity" featured="true"></m-channelCard>
+  <m-publisherCard [publisher]="entity" featured="true"></m-publisherCard>
 
   <div class="m-liquiditySpot__disclaimer" (click)="onClick($event)">
     <m-tooltip icon="info" anchor="bottom">
