--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -278,6 +278,27 @@
       </li>
 
       <li
+        *mIfFeature="'matrix'"
+        class="m-sidebarNavigation__item"
+        [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        routerLinkActiveOptions="{ exact: true }"
+      >
+        <a [routerLink]="['/groups/memberships']" (click)="toggle()">
+          <m-tooltip
+            [enabled]="!showLabels"
+            [anchor]="'left'"
+            [useParentPosition]="true"
+          >
+            <i class="material-icons" m-tooltip--anchor>group</i>
+            <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
+          </m-tooltip>
+          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__GROUPS">
+            Groups
+          </span>
+        </a>
+      </li>
+
+      <li
         *ngIf="user"
         class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
@@ -316,7 +337,7 @@
     </ul>
   </nav>
 
-  <div class="m-sidebar--groups" [hidden]="!user">
+  <div class="m-sidebar--groups" [hidden]="!user || matrixFeature">
     <ng-template dynamic-host></ng-template>
   </div>
 </div>
