--- a/src/app/modules/admin/monetization/monetization.html
+++ b/src/app/modules/admin/monetization/monetization.html
@@ -16,11 +16,11 @@
       class="mdl-card mdl-shadow--4dp m-report"
       *ngFor="let entity of entities; let i = index"
     >
-      <m-channelCard
-        [channel]="entity"
+      <m-publisherCard
+        [publisher]="entity"
         *ngIf="entity.type == 'user'"
         [showSubscribeButton]="false"
-      ></m-channelCard>
+      ></m-publisherCard>
       <minds-activity
         [object]="entity"
         class="mdl-card"
