--- a/src/app/modules/admin/verify/verify.component.scss
+++ b/src/app/modules/admin/verify/verify.component.scss
@@ -16,7 +16,7 @@
     margin-right: 10px;
   }
 
-  .m-channelCard {
+  .m-publisherCard {
     @include m-theme() {
       border: none;
       border-bottom: 1px solid themed($m-borderColor--primary);
