--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -24,7 +24,13 @@
 </m-body>
 
 <ng-container *mIfBrowser>
-  <m-messenger *ngIf="session.isLoggedIn() && !isProDomain"></m-messenger>
+  <m-messenger
+    *ngIf="
+      session.isLoggedIn() &&
+      !isProDomain &&
+      (messengerService.showLegacyMessenger$ | async)
+    "
+  ></m-messenger>
 </ng-container>
 
 <m-hovercard-popup></m-hovercard-popup>
