(feat): open chat when messenger is selected - closes #4605

--- a/src/app/modules/channels/v2/actions/message.component.html
+++ b/src/app/modules/channels/v2/actions/message.component.html
@@ -1,3 +1,4 @@
 <m-button (onAction)="message()" iconOnly="true" overlay="true">
-  <m-icon iconId="chat_bubble" [sizeFactor]="0"></m-icon>
+  <m-icon *ngIf="!inProgress" iconId="chat_bubble" [sizeFactor]="0"></m-icon>
+  <m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
 </m-button>
