--- a/src/app/modules/groups/groups-join-button.html
+++ b/src/app/modules/groups/groups-join-button.html
@@ -41,6 +41,7 @@
     <m-button
       class="m-groupsJoinButton__verdict"
       (onAction)="accept()"
+      [saving]="inProgress"
       i18n="@@M__ACTION__ACCEPT"
       size="small"
     >
@@ -49,6 +50,7 @@
     <m-button
       class="m-groupsJoinButton__verdict"
       (onAction)="decline()"
+      [saving]="inProgress"
       i18n="@@GROUPS__JOIN_BUTTON__DECLINE_ACTION"
       size="small"
     >
@@ -59,6 +61,7 @@
     class="m-groupsJoinButton__leave"
     *ngIf="group['is:member']"
     (onAction)="leave()"
+    [saving]="inProgress"
     i18n="@@GROUPS__JOIN_BUTTON__LEAVE_ACTION"
     size="small"
   >
@@ -68,6 +71,7 @@
     class="m-groupsJoinButton__cancel"
     *ngIf="group['is:awaiting']"
     (onAction)="cancelRequest()"
+    [saving]="inProgress"
     i18n="@@GROUPS__JOIN_BUTTON__CANCEL_REQ_ACTION"
     size="small"
   >
